--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Subdomain Takeover PoC</title>
+  <meta charset="UTF-8">
+  <title>✅ Subdomain Takeover PoC</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      background: #111;
+      color: #0f0;
+    }
+    h1 {
+      font-size: 2.5em;
+      color: #f00;
+    }
+    p {
+      font-size: 1.2em;
+    }
+    .box {
+      border: 2px dashed #0f0;
+      padding: 20px;
+      display: inline-block;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h1>✅ Subdomain Takeover PoC</h1>
-  <p>This page is hosted to demonstrate a takeover of:</p>
-  <strong>kubecost.platform.linktr.ee</strong>
-  <br><br>
-  <em>- Reported by Anonymous_din/em>
+  <h1>🔥 Subdomain Takeover Success 🔥</h1>
+  <div class="box">
+    <p>This subdomain is pointing to <strong>Cargo Collective</strong> but is currently <strong>unclaimed</strong>.</p>
+    <p>PoC by: <b>Dinesh</b></p>
+    <p>Target: <code>google.com</code></p>
+  </div>
 </body>
 </html>
+
