--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
   <div class="box">
     <p>This subdomain is pointing to <strong>Cargo Collective</strong> but is currently <strong>unclaimed</strong>.</p>
     <p>PoC by: <b>Dinesh</b></p>
-    <p>Target: <code>google.com</code></p>
+    <p>Target: <code>kubecost.platform.linktr.ee</code></p>
   </div>
 </body>
 </html>
-
