fix: added full HTML for PoC page

--- a/index.html
+++ b/index.html
@@ -8,30 +8,28 @@
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 50px;
-      background: #111;
+      background-color: #111;
       color: #0f0;
     }
     h1 {
       font-size: 2.5em;
-      color: #f00;
+      color: #ff4444;
     }
-    p {
-      font-size: 1.2em;
-    }
-    .box {
-      border: 2px dashed #0f0;
+    .info {
+      background: #222;
+      border: 1px dashed #0f0;
       padding: 20px;
-      display: inline-block;
       margin-top: 20px;
+      display: inline-block;
     }
   </style>
 </head>
 <body>
   <h1>🔥 Subdomain Takeover Success 🔥</h1>
-  <div class="box">
-    <p>This subdomain is pointing to <strong>Cargo Collective</strong> but is currently <strong>unclaimed</strong>.</p>
-    <p>PoC by: <b>Dinesh</b></p>
-    <p>Target: <code>kubecost.platform.linktr.ee</code></p>
+  <div class="info">
+    <p><strong>Subdomain:</strong> kubecost.platform.linktr.ee</p>
+    <p><strong>Status:</strong> Points to unclaimed Cargo Collective</p>
+    <p><strong>PoC by:</strong> Dinesh (TEAM-DH49)</p>
   </div>
 </body>
 </html>
